k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eko
  namespace: eko
spec:
  selector:
    app: eko
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
